--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
+url: https://semihonay.me
+title: COMP-461
+email: semionay@gmail.com
 description: > # "Write an awesome description for your new site here. 
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
@@ -24,8 +24,8 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
+    url: https://twitter.com/semyonic
   - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+    url: https://github.com/Semyonic
   - title: linkedin
-    url: 
+    url: http://tr.linkedin.com/pub/semih-onay/93/298/267/
