--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,22 @@
 language: ruby
 rvm:
-- 1.9.3
-branches:
-  only:
-  - develop
-script: rake travis
+- 2.2
+script:
+- bundle exec jekyll build
+after_success:
+- git clone https://$GITHUB_REPO
+- cd $(basename ${GITHUB_REPO%.git})
+- git config user.name "Travis CI"
+- git config user.email ${EMAIL}
+- rsync -az --delete --exclude '.git*' ../_site/ .
+- touch .nojekyll
+- git add -A .
+- git commit -m "Generated Jekyll site by Travis CI - ${TRAVIS_BUILD_NUMBER}"
+- git push --force "https://${DEPLOY_KEY}@${GITHUB_REPO}" HEAD:${REPO_TARGET_BRANCH}
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+  - GITHUB_REPO: https://github.com/Semyonic/semyonic.github.io.git
+  - REPO_TARGET_BRANCH: master
+  - secure: ab/uI65HyDKaKz4i28OMqelDOnPNBHMT0uZnyDzhDv7+Iq/jOiTf1EJYsv07D6fNSyqHbFTMj5oPGuMLZOHtBk9lfEbM6wczTUYOlUMRthpshmZvD61kjhyH0F+jOhoXeagxP0MD8X8ZwqLaRduxNfw/AxUchxGJ/A4S9cXjd2g=
+  - secure: efFfRErq7xDMkib3nJhOUbgFGhdsBj1SdVd32i5tVFu/Amz5lKj+56UvyW/4ZEiU+UOt/IHQqzAnNPSxTxp270kpwE1CVPUp0UypmsF6oUK8wttoj9nkA13Qwpzp+i6VKMpkgAMK6g/tqGdoAp6nEfeQjPreMYexNQi6//0Qgjk=
